--- a/frontend/app/output.css
+++ b/frontend/app/output.css
@@ -715,6 +715,14 @@ video {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
 .h-16 {
   height: 4rem;
 }
@@ -757,6 +765,10 @@ video {
 
 .w-6 {
   width: 1.5rem;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .w-full {
@@ -848,6 +860,12 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1276,21 +1294,6 @@ video {
   color: rgb(161 98 7 / var(--tw-text-opacity));
 }
 
-.text-brand-400 {
-  --tw-text-opacity: 1;
-  color: rgb(228 102 102 / var(--tw-text-opacity));
-}
-
-.text-brand-300 {
-  --tw-text-opacity: 1;
-  color: rgb(234 139 139 / var(--tw-text-opacity));
-}
-
-.text-brand-200 {
-  --tw-text-opacity: 1;
-  color: rgb(240 175 175 / var(--tw-text-opacity));
-}
-
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -1347,6 +1350,15 @@ video {
   transition-duration: 300ms;
 }
 
+body {
+  background-image: url('/images/background.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: rgb(231, 231, 231);
+  background-blend-mode: overlay;
+}
+
 .last\:border-b-0:last-child {
   border-bottom-width: 0px;
 }
@@ -1375,14 +1387,14 @@ video {
   background-color: rgb(250 230 230 / var(--tw-bg-opacity));
 }
 
+.hover\:text-brand-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(222 79 79 / var(--tw-text-opacity));
+}
+
 .hover\:text-gray-600:hover {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.hover\:text-red-600:hover {
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
 .hover\:shadow-xl:hover {
@@ -1421,6 +1433,10 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:inline {
+    display: inline;
+  }
+
   .sm\:gap-6 {
     gap: 1.5rem;
   }
@@ -1461,8 +1477,20 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
+  }
+
+  .md\:cursor-default {
+    cursor: default;
   }
 
   .md\:grid-cols-2 {
@@ -1511,4 +1539,3 @@ video {
     flex-direction: row;
   }
 }
-
